--- a/css/client.css
+++ b/css/client.css
@@ -1,3 +1,19 @@
 body{
     font-family: 'Allison', cursive;
 }
+
+.discounts {
+    border-radius: 4px;
+    box-shadow: 2px 2px 4px 0px rgba(150,150,150,1);
+}
+
+.jumbotron, .discounts {
+    border: 1px solid #000000;
+}
+
+.toast {
+    position: absolute;
+    top: 85px;
+    right: 10px;
+}
+
